initial text preparation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>The Readers Project</title>
+  <title>rtwtr</title>
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="data/all-bigrams.js"></script>
   <script src="src/text-loader.js"></script>
