small changes to initial configuration

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Focused Reader Display -->
   <div id="focusDisplayWrapper">
-    <div id="focusDisplayTag"><span id="status"> - </span>Focused Reader</div>
+    <div id="focusDisplayTag"><span id="status"> + </span>Focused Reader</div>
     <div id="focusDisplay"></div>
   </div>
 
