--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       </span>
     </div>
   
-    <div id='b0' class="bdiv">
+    <div class="bdiv">
       <span id="s0" class="text b">
         This essay will not consider the problems concerning the future of teaching the art of writing in the face of the growing importance of nonliterate messages in our surroundings, although those problems will become ever more important both in the so-called developed countries and in societies where illiteracy is still widespread.</span>
     </div>
-    <div id='b1' class="bdiv">
+    <div class="bdiv">
       <span id="s1" class="text b">
         Instead, it proposes to consider a tendency that underlies those problems: namely, the tendency away from linear codes such as writing and toward two-dimensional codes such as photographs, films, and TV, a tendency that may be observed if one glances even superficially at the codified world that surrounds us.</span>
     </div>
-    <div id='b2' class="bdiv">
+    <div class="bdiv">
       <span id="s2" class="text b">
         The future of writing, of that gesture which aligns symbols to produce texts, must be seen against the background of that tendency.</span>
     </div>
