parse new syntags

--- a/test/index.html
+++ b/test/index.html
@@ -10,17 +10,21 @@
 </head>
 
 <body>
-  <div id="content">
-
-
-
-  </div>
-
+<div class="menu">
+  <ul>
+  </ul>
+</div>
 <div id="template">
   <div class="page">
       <div class="adiv">
+        <p>
+          <span class="tb"></span>
+        </p>
       </div>
       <div class="bdiv">
+        <p>
+          <span class="tb"></span>
+        </p>
       </div>
   </div>
   </div>
