--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,19 @@
   </div>
   </div>
 
-  <script src="parsing-test.js"></script>
+<div id="overlay">
+  <p>
+  <span id="beforeAnchor"></span>
+  <span id="anchor"></span>
+  <span id="afterAnchor"></span>
+ </p>
+</div>
+
+<div id="getTextWidth">
+</div>
+
+<script src="context.js"></script>
+<script src="parsing-test.js"></script>
 </body>
 
 </html>
