--- a/test/index.html
+++ b/test/index.html
@@ -31,9 +31,10 @@
 
 <div id="overlay">
   <p>
-  <span id="beforeAnchor"></span>
-  <span id="anchor"></span>
+  <span id="beforeAnchorA"></span>
+  <span id="anchor" class="anchor"></span>
   <span id="afterAnchor"></span>
+  <div id="beforeAnchorB"></div>
  </p>
 </div>
 
