use local jquery

--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>rtwtr</title>
-  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../rtwtr_files/jquery.min.js"></script>
 
   <link rel="stylesheet" href="style.css">
 </head>
