add page widget

--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,10 @@
 
 <body>
 <div class="menu">
-  <ul>
-  </ul>
+  <div id="prev" class="button" title="previous page"><<</div>
+  <div class="custom-select"><select></select>
+  </div>
+  <div id="next" class="button" title="next page">>></div>
 </div>
 <div id="template">
   <div class="page">
@@ -43,6 +45,7 @@
 
 <script src="context.js"></script>
 <script src="parsing-test.js"></script>
+<script src="ui.js"></script>
 </body>
 
 </html>
