--- a/rtwtr.html
+++ b/rtwtr.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0023)http://rtwtr:8888/test/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+
   <title>rtwtr</title>
-  <script src="./rtwtr_files/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
 
   <link rel="stylesheet" href="./rtwtr_files/style.css">
 </head>
