--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>rtwtr</title>
+  <title>-WRITING &nbsp;/&nbsp; +LANGUAGE</title>
   <script src="js/jquery.min.js"></script>
 
   <link rel="stylesheet" href="style.css">
