minor tweaks in html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 <div class="menu">
-  <div id="prev" class="button" title="previous page"><<</div>
+  <div id="prev" class="button" title="previous page">&lt;&lt;</div>
   <div class="custom-select"><select></select>
   </div>
-  <div id="next" class="button" title="next page">>></div>
+  <div id="next" class="button" title="next page">&gt;&gt;</div>
 </div>
 <div id="template">
   <div class="page">
