first attempt for vertical space making for surrounding content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       </div>
   </div>
   </div>
+<div id="overlayContentBefore">
 
+</div>
 <div id="overlay">
   <p>
   <span id="beforeAnchorA"></span>
@@ -33,6 +35,9 @@
   <span id="afterAnchor"></span>
   <div id="beforeAnchorB"></div>
   </p>
+</div>
+<div id="overlayContentAfter">
+
 </div>
 
 <div id="getTextWidth">
