fix verse for single lines

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
   <p>
   <span id="beforeAnchorA"></span>
   <span id="anchor" class="anchor"></span>
-  <span id="afterAnchor"></span>
+  <span id="afterAnchorA"></span>
   <div id="beforeAnchorB"></div>
+  <div id="afterAnchorB"></div>
   </p>
 </div>
 <div id="overlayContentAfter">
