begin programmatic diff

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>-WRITING &nbsp;/&nbsp; +LANGUAGE</title>
   <script src="js/jquery.min.js"></script>
+  <script src="js/diff.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
