--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 <div id="getTextWidth">
 </div>
+<!-- <div id="vianext" onclick="goNext()">></div> -->
 <script type="text/javascript">
 (function() {
 var link = document.querySelector("link[rel*='icon']") || document.createElement('link');
