tweaking ui for VIA

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 <div class="menu">
   <div id="prev" class="button" title="previous page">&lt;&lt;</div>
+  <!-- Removed for in fork devoted to VIA collab with C. Bergvall
   <div class="custom-select"><select></select>
-  </div>
+  </div> -->
   <div id="next" class="button" title="next page">&gt;&gt;</div>
 </div>
 <div id="template">
